manifest/routing-3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: "5xx"
---
# O Canary Deployment permite aos usuários se cadastrarem para usar uma versão beta da aplicação.
# Configurar regras de Canary no Istio, direcionando as requisições de acordo com cabeçalhos.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleware
spec:
  hosts:
  - middleware
  http:
  - match:
    - headers: # Canary Deployment
        x-dev-user:
          exact: beta
    route:
    - destination:
        host: middleware
        subset: canary
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: "5xx"
  - route:
    - destination:
        host: middleware
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: "5xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: "5xx"
